🔨 FIX: text alignment on h1

--- a/07. faq-accordion-card/styles.css
+++ b/07. faq-accordion-card/styles.css
@@ -113,6 +113,10 @@ details[open] summary::after {
 		flex-grow: 1;
 	}
 
+	h1 {
+		text-align: left;
+	}
+
 	.illustration-container {
 		position: relative;
 		flex-shrink: 0;
